.provarCaches/00D5f000005vwGkEAI/objects/rstkf__rifrsec__c.object
<CustomObject>
    <description>rifrsec__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <description>externalid__c</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__rifrsec_rifr__r.rstkf__externalid__c + rstkf__rifrsec_secname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__rifrsec_secname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_acctsource__c</fullName>
        <description>This field allows the user to identify the source for the GL Accounts when creating Reporting Sections with the Section Type of Data.  Options are with a Reporting Account Group, using the  Account Type Override, or the Account Cash Flow Section.</description>
        <inlineHelpText>This field allows the user to identify the source for the GL Accounts when creating Reporting Sections with the Section Type of Data.  Options are with a Reporting Account Group, using the  Account Type Override, or the Account Cash Flow Section.</inlineHelpText>
        <label>Data Section Account Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reporting Account Group</fullName>
                    <default>true</default>
                    <label>Reporting Account Group</label>
                </value>
                <value>
                    <fullName>Account Type Override</fullName>
                </value>
                <value>
                    <fullName>Cash Flow Section</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_cfcash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates this is a Cashflow Cash Section which will cause two rows to be presented in the RFA Cashflow report - one with the opening balance for the period and the other with cumulative activity.</description>
        <inlineHelpText>This field indicates this is a Cashflow Cash Section which will cause two rows to be presented in the RFA Cashflow report - one with the opening balance for the period and the other with cumulative activity.</inlineHelpText>
        <label>Cash Flow Cash Section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_cfsection__c</fullName>
        <description>When building a Cash Flow Report, use of this field in Data Sections allows for the set of GL Accounts included in this section to be determined by using those with a corresponding value (vs. using an Account Group).</description>
        <inlineHelpText>When building a Cash Flow Report, use of this field in Data Sections allows for the set of GL Accounts included in this section to be determined by using those with a corresponding value (vs. using an Account Group).</inlineHelpText>
        <label>Cash Flow Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition of subsidiaries, net of cash acquired</fullName>
                </value>
                <value>
                    <fullName>Amortization of intangible assets</fullName>
                </value>
                <value>
                    <fullName>Asset reunification</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Depreciation of property, plant and equipment (excluding right-of-use assets)</fullName>
                </value>
                <value>
                    <fullName>Depreciation of right-of-use assets</fullName>
                </value>
                <value>
                    <fullName>Dividends paid to equity shareholders of the Parent</fullName>
                </value>
                <value>
                    <fullName>Effect of exchange rates on cash and cash equivalents</fullName>
                </value>
                <value>
                    <fullName>Expenses on RoV</fullName>
                </value>
                <value>
                    <fullName>Income taxes paid</fullName>
                </value>
                <value>
                    <fullName>Interest expense on lease liabilities</fullName>
                </value>
                <value>
                    <fullName>Interest paid</fullName>
                </value>
                <value>
                    <fullName>Interest received</fullName>
                </value>
                <value>
                    <fullName>Loss on disposal of intangibles</fullName>
                </value>
                <value>
                    <fullName>Loss on disposal of property, plant and equipment</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from inventories</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from provisions</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from trade and other payables (including contract liabilities)</fullName>
                </value>
                <value>
                    <fullName>Net cash flow from trade and other receivables (including contract assets)</fullName>
                </value>
                <value>
                    <fullName>Net finance cost</fullName>
                </value>
                <value>
                    <fullName>New borrowings – bank loan</fullName>
                </value>
                <value>
                    <fullName>New borrowings – finance leases</fullName>
                </value>
                <value>
                    <fullName>Other adjustments</fullName>
                </value>
                <value>
                    <fullName>Payment of lease liabilities</fullName>
                </value>
                <value>
                    <fullName>Proceeds from disposal of property, plant and equipment</fullName>
                </value>
                <value>
                    <fullName>Proceeds from share issues</fullName>
                </value>
                <value>
                    <fullName>Profit before taxation</fullName>
                </value>
                <value>
                    <fullName>Purchase of own shares</fullName>
                </value>
                <value>
                    <fullName>Purchases of intangible assets</fullName>
                </value>
                <value>
                    <fullName>Purchases of property, plant and equipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_display_section_name__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rifrsec_display_section_name__c</description>
        <label>Display Section Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_font_size__c</fullName>
        <description>rifrsec_font_size__c</description>
        <label>Z_OBSOLETE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_formula__c</fullName>
        <description>rifrsec_formula</description>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_glfstmlt7__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>rifrsec_glfstmlt7__c</description>
        <inlineHelpText>For Data type sections only. This is the Reporting Account Group that will supply the section’s data.</inlineHelpText>
        <label>Reporting Account Group for the Section</label>
        <referenceTo>rstkf__glfstmplt7__c</referenceTo>
        <relationshipLabel>Financial Analytics Report Section</relationshipLabel>
        <relationshipName>rifrsecs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_gsfs_name__c</fullName>
        <description>rifrsec_gsfs_name__c</description>
        <label>Grouping Section Footer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_isvalidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Formula Validated</description>
        <label>Formula Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_key_label__c</fullName>
        <description>rifrsec_key_label__c</description>
        <label>Z_OBSOLETE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_numeric_scale__c</fullName>
        <formula>rstkf__rifrsec_rifr__r.rstkf__rifr_numeric_scale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Scale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_order__c</fullName>
        <description>rifrsec_order__c</description>
        <label>Z_OBSOLETE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_parent_rifrsec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>rifrsec_parent_rifrsec__c</description>
        <label>Parent Financial Report Section</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>rstkf__rifrsec__c.rstkf__rifrsec_rifr__c</field>
                <operation>equals</operation>
                <valueField>$Source.rstkf__rifrsec_rifr__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstkf__rifrsec__c</referenceTo>
        <relationshipLabel>Financial Analytics Report Section</relationshipLabel>
        <relationshipName>rifrsecs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_period_name__c</fullName>
        <formula>rstkf__rifrsec_rifr__r.rstkf__rifr_periodname__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Z_OBSOLETE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_ragover__c</fullName>
        <inlineHelpText>This field allows the user to specify all accounts in the COA of a certain type instead of using a Reporting Account Group when defining a Data type Report Section.</inlineHelpText>
        <label>Reporting Account Group Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Override</fullName>
                    <default>true</default>
                    <label>No Override</label>
                </value>
                <value>
                    <fullName>All Asset Accounts</fullName>
                </value>
                <value>
                    <fullName>All Liability Accounts</fullName>
                </value>
                <value>
                    <fullName>All Capital Accounts</fullName>
                </value>
                <value>
                    <fullName>All Revenue Accounts</fullName>
                </value>
                <value>
                    <fullName>All Expense Accounts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_reverse_sign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rifrsec_reverse_sign__c</description>
        <inlineHelpText>If checked, values that would otherwise show as positive will show as negative, and vice versa.</inlineHelpText>
        <label>Reverse the sign of amounts displayed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_rifr__c</fullName>
        <description>rifrsec_rifr__c</description>
        <label>Financial Report</label>
        <referenceTo>rstkf__rifr__c</referenceTo>
        <relationshipName>rifrsecs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_schema__c</fullName>
        <description>rifrsec_schema__c</description>
        <label>Z_OBSOLETE</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_secname__c</fullName>
        <description>rifrsec_secname__c</description>
        <label>Report Section Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_section_type__c</fullName>
        <description>rifrsec_section_type__c</description>
        <label>Section Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Grouping</fullName>
                </value>
                <value>
                    <fullName>Calculated</fullName>
                </value>
                <value>
                    <fullName>Net Income</fullName>
                </value>
                <value>
                    <fullName>Net Income Before Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_seq__c</fullName>
        <label>Sort Seq</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__rifrsec_show_gsfs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>rifrsec_show_gsfs__c</description>
        <label>Z_OBSOLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>triggeroptions__c</description>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Analytics Report Section</label>
    <listViews>
        <fullName>rstkf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstkf__All1</fullName>
        <columns>rstkf__rifrsec_rifr__c</columns>
        <columns>NAME</columns>
        <columns>rstkf__rifrsec_seq__c</columns>
        <columns>rstkf__rifrsec_parent_rifrsec__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__Report_sections</fullName>
        <columns>NAME</columns>
        <columns>rstkf__rifrsec_parent_rifrsec__c</columns>
        <columns>rstkf__rifrsec_rifr__c</columns>
        <columns>rstkf__rifrsec_display_section_name__c</columns>
        <columns>rstkf__rifrsec_secname__c</columns>
        <columns>rstkf__rifrsec_section_type__c</columns>
        <columns>rstkf__rifrsec_numeric_scale__c</columns>
        <columns>rstkf__rifrsec_seq__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Report sections</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Analytics Report Section</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>